@@ -57,6 +57,8 @@ the build from version 2.20 to 2.34.  (See {ml-pull}1013[#1013].)
 model training. (See {ml-pull}1034[#1034].)
 * Add instrumentation information for supervised learning data frame analytics jobs.
 (See {ml-pull}1031[#1031].)
+* Add instrumentation information for outlier detection data frame analytics jobs.
+(See {ml-pull}1068[#1068].)
 
 === Bug Fixes
 
